--- a/Wie Denke Ich?/Base.lproj/Main.storyboard
+++ b/Wie Denke Ich?/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,29 +18,89 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gKS-Hb-bxV">
-                                <rect key="frame" x="359" y="68" width="97" height="30"/>
-                                <animations/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Var B" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gKS-Hb-bxV">
+                                <rect key="frame" x="354" y="121" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="tTA-Cd-Qx7">
-                                <rect key="frame" x="340" y="464" width="240" height="128"/>
-                                <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tTA-Cd-Qx7">
+                                <rect key="frame" x="340" y="373" width="240" height="219"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="219" id="OCr-cQ-gWs"/>
+                                    <constraint firstAttribute="width" constant="240" id="Usx-TP-x10"/>
+                                </constraints>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehC-pA-x61">
-                                <rect key="frame" x="512" y="186" width="46" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehC-pA-x61">
+                                <rect key="frame" x="268" y="252" width="64" height="30"/>
+                                <state key="normal" title="Calculate"/>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Var A" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oF3-gv-j3b">
+                                <rect key="frame" x="150" y="121" width="97" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="R41-h6-jL4">
+                                <rect key="frame" x="20" y="551" width="94" height="29"/>
+                            </stepper>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YBp-zL-6UN">
+                                <rect key="frame" x="255" y="28" width="91" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="91" id="nbe-QR-ZVa"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="+" value=""/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="-" value=""/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="*" value=""/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="keyPath" value=""/>
+                                </userDefinedRuntimeAttributes>
+                            </pickerView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Result" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WNm-Tv-wVw">
+                                <rect key="frame" x="150" y="315" width="301" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="301" id="3AE-eL-5Xh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="tKu-qU-jiM">
+                                <rect key="frame" x="150" y="305" width="301" height="2"/>
+                            </progressView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="oF3-gv-j3b" firstAttribute="baseline" secondItem="gKS-Hb-bxV" secondAttribute="baseline" id="4PM-9A-seg"/>
+                            <constraint firstItem="tTA-Cd-Qx7" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="708-pR-ZDj"/>
+                            <constraint firstItem="YBp-zL-6UN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="9O5-iT-39n"/>
+                            <constraint firstAttribute="bottom" secondItem="WNm-Tv-wVw" secondAttribute="bottom" constant="255" id="FC9-C6-zUO"/>
+                            <constraint firstAttribute="bottom" secondItem="R41-h6-jL4" secondAttribute="bottom" constant="20" symbolic="YES" id="Lvi-5Y-FiP"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="leading" secondItem="tKu-qU-jiM" secondAttribute="leading" id="QOf-kc-RtS"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="centerX" secondItem="ehC-pA-x61" secondAttribute="centerX" id="Sdf-47-LXS"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="top" secondItem="tKu-qU-jiM" secondAttribute="bottom" constant="8" symbolic="YES" id="VM9-zY-sLT"/>
+                            <constraint firstItem="oF3-gv-j3b" firstAttribute="centerY" secondItem="YBp-zL-6UN" secondAttribute="centerY" id="VeY-K9-dwX"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="anY-xk-FtG"/>
+                            <constraint firstItem="YBp-zL-6UN" firstAttribute="leading" secondItem="oF3-gv-j3b" secondAttribute="trailing" constant="8" symbolic="YES" id="eL9-PZ-8RO"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="leading" secondItem="oF3-gv-j3b" secondAttribute="leading" id="jBD-bw-6yx"/>
+                            <constraint firstItem="R41-h6-jL4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sGK-ic-Ge6"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="centerX" secondItem="YBp-zL-6UN" secondAttribute="centerX" id="trJ-sV-UdL"/>
+                            <constraint firstItem="gKS-Hb-bxV" firstAttribute="leading" secondItem="YBp-zL-6UN" secondAttribute="trailing" constant="8" symbolic="YES" id="uJf-ss-0tY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tTA-Cd-Qx7" secondAttribute="bottom" constant="8" symbolic="YES" id="wbl-Bv-eyA"/>
+                            <constraint firstItem="ehC-pA-x61" firstAttribute="top" secondItem="YBp-zL-6UN" secondAttribute="bottom" constant="8" symbolic="YES" id="x4Y-CW-dqu"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="trailing" secondItem="tKu-qU-jiM" secondAttribute="trailing" id="y0K-iK-zeC"/>
+                            <constraint firstItem="WNm-Tv-wVw" firstAttribute="trailing" secondItem="gKS-Hb-bxV" secondAttribute="trailing" id="yUR-I9-U2H"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="Result" destination="WNm-Tv-wVw" id="XhZ-2C-PgP"/>
+                        <outlet property="Shell" destination="tTA-Cd-Qx7" id="jRo-YG-zuv"/>
+                        <outlet property="VarA" destination="oF3-gv-j3b" id="xKx-pR-g3K"/>
+                        <outlet property="VarB" destination="gKS-Hb-bxV" id="67g-uq-twL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
